Added more tests and refactored the code